--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     </parent>
     <groupId>com.infoworks.lab</groupId>
     <artifactId>data-jpa-unit-test</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -112,5 +113,15 @@
         </dependency>
         <!-- -->
     </dependencies>
+
+    <build>
+        <finalName>ROOT</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
