--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <version>1.4.200</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.stefanbirkner</groupId>
+            <artifactId>system-rules</artifactId>
+            <version>1.19.0</version>
+            <scope>test</scope>
+        </dependency>
         <!-- -->
         <!-- Jersey 2.27 -->
         <!-- We are only interested in rest service consume. -->
