--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,10 @@
             <version>1.0-RELEASE</version>
         </dependency>
         <!-- -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
