--- a/src/test/resources/h2-db.properties
+++ b/src/test/resources/h2-db.properties
@@ -2,6 +2,7 @@
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create-drop
+hibernate.generate-ddl=true
 #
 app.db.name=myDb
 app.db.driverClassName=org.h2.Driver
