--- a/src/main/resources/h2-db.properties
+++ b/src/main/resources/h2-db.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.hbm2ddl.auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 ##Datasource Configuration
 ##jdbc:h2:mem:<db-name>;DB_CLOSE_DELAY=-1
-spring.datasource.url=${app.db.url.schema}${app.db.name};DB_CLOSE_DELAY=-1
+spring.datasource.url=${app.db.url.schema}${app.db.name};DB_CLOSE_DELAY=-1;DATABASE_TO_LOWER=TRUE
 spring.datasource.username=${app.db.username}
 spring.datasource.password=${app.db.password}
 spring.datasource.driver-class-name=org.h2.Driver
