--- a/src/main/resources/h2-db.properties
+++ b/src/main/resources/h2-db.properties
@@ -12,7 +12,10 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.hbm2ddl.auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 ##Datasource Configuration
-##jdbc:h2:mem:<db-name>;DB_CLOSE_DELAY=-1
+##In-Mem:-  jdbc:h2:mem:<db-name>;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+##On-Disk:- jdbc:h2:file:C:/data/demodb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+##Cur-Dir:- jdbc:h2:file:~/demodb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+##Wrk-Dir:- jdbc:h2:file:./demodb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
 spring.datasource.url=${app.db.url.schema}${app.db.name};DB_CLOSE_DELAY=-1;DATABASE_TO_LOWER=TRUE
 spring.datasource.username=${app.db.username}
 spring.datasource.password=${app.db.password}
