--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,8 +26,8 @@ services:
       image: spring-microservice-starter:1.0
       build:
          context: .
-         #dockerfile: Dockerfile
-         dockerfile: Dockerfile-embedded
+         #dockerfile: Dockerfile-war
+         dockerfile: Dockerfile
       environment:
          app.db.name: testDB
          app.db.host: mysql-db
