--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,7 @@ services:
          app.db.port: 3306
          app.db.username: root
          app.db.password: root@123
+         spring.profiles.active: mysql
          management.endpoints.web.exposure.include: health,metrics,httptrace,prometheus
       ports:
          - 8080:8080
